--- a/css/style.css
+++ b/css/style.css
@@ -21,28 +21,38 @@ a {
 .header {
   display: flex;
   align-items: center;
+  background: #FAFAFA;
 }
 
 .logo {
   margin-left: 80px;
   padding-top: 39px;
   padding-bottom: 39px;
+  font-family: "Homemade Apple", cursive;
+  color: #231f20;
+  font-size: 18px;
+  line-height: calc(39 / 18);
 }
 
 .header-list {
   display: flex;
-  margin-left: 433px;
+  margin-left: 420px;
 }
 
 .header-list .item:not(:first-child) {
   margin-left: 31px;
 }
-
+.header-list .link {
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+  line-height: 22px;
+  color: #000000;
+}
 .header-btn {
-  margin-left: 375px;
+  margin-left: 370px;
   padding: 13px 20px;
-
   background-color: transparent;
   border: 1px solid #f7941e;
+  color: #f7941e;
   border-radius: 5px;
 }
