--- a/css/main.css
+++ b/css/main.css
@@ -20,34 +20,20 @@ img {
   margin-right: auto;
 }
 
-/* header */
-
 .header {
   display: flex;
   align-items: center;
   background: #fafafa;
 }
-
-.logo {
-  margin-left: 80px;
-  padding-top: 39px;
-  padding-bottom: 39px;
-  font-family: 'Homemade Apple', cursive;
-  color: #231f20;
-  font-size: 18px;
-  line-height: calc(39 / 18);
-}
-
 .header__list {
   display: flex;
   margin-left: 420px;
 }
-
 .header__item:not(:first-child) {
   margin-left: 31px;
 }
 .header__link {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 18px;
   line-height: 22px;
   color: #000000;
@@ -60,45 +46,51 @@ img {
   color: #f7941e;
   border-radius: 5px;
 }
+.header__btn:hover, .header__btn:focus {
+  color: #ffffff;
+  background-color: #f7941e;
+  border-color: transparent;
+}
+
+.logo {
+  margin-left: 80px;
+  padding-top: 39px;
+  padding-bottom: 39px;
+  font-family: "Homemade Apple", cursive;
+  color: #231f20;
+  font-size: 18px;
+  line-height: 2.1666666667;
+}
 
 .hero {
   display: flex;
   padding: 0;
   background-color: #f1f1f2;
 }
-
 .hero__box {
   padding-left: 150px;
   padding-top: 160px;
 }
-
 .hero__image {
   margin-left: auto;
 }
-
 .hero__title {
   margin: 0;
   width: 430px;
-
   font-size: 56px;
   line-height: 1.23;
 }
-
 .hero__text {
   margin-top: 36px;
   margin-bottom: 0;
   width: 430px;
-
   font-size: 20px;
   line-height: 1.4;
 }
-
 .hero__button {
   margin-top: 52px;
-
   font-size: 18px;
   line-height: 1.22;
-
   display: flex;
   width: 200px;
   height: 60px;
@@ -106,11 +98,15 @@ img {
   align-items: center;
   text-align: center;
   text-transform: uppercase;
-
   color: #fff;
   background-color: #f7941e;
   border: transparent;
   border-radius: 4px;
+}
+.hero__button:hover, .hero__button:focus {
+  color: #f7941e;
+  background-color: transparent;
+  border: 1px solid #f7941e;
 }
 
 .feature {
@@ -118,43 +114,34 @@ img {
   padding: 0;
   background-color: #f1f1f2;
 }
-
 .feature__box {
   padding-left: 110px;
   padding-top: 165px;
 }
-
 .feature__image {
   padding: 0;
-  object-fit: contain;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
-
 .feature__title {
   margin-top: 0;
   margin-bottom: 23px;
-
   font-weight: 400;
   font-size: 32px;
   line-height: 1.4;
 }
-
 .feature__text {
   margin: 0;
   margin-bottom: 32px;
   width: 440px;
-
   font-size: 20px;
   line-height: 1.4;
-
   text-align: justify;
 }
-
 .feature__button {
   margin-top: 52px;
-
   font-size: 18px;
   line-height: 1.35;
-
   display: flex;
   width: 200px;
   height: 60px;
@@ -162,50 +149,51 @@ img {
   align-items: center;
   text-align: center;
   text-transform: uppercase;
-
   color: #f7941e;
   background-color: #f1f1f2;
   border: 1px solid #f7941e;
   border-radius: 4px;
 }
-
-/* Post section */
+.feature__button:hover, .feature__button:focus {
+  color: #f1f1f2;
+  background-color: #f7941e;
+}
 
 .post {
   padding-top: 96px;
   padding-bottom: 120px;
 }
-
 .post__title {
   font-weight: 400;
   font-size: 32px;
   line-height: 1.18;
-
   text-align: center;
   color: #000000;
 }
-
 .post__text {
   font-size: 18px;
   line-height: 1.36;
-
   margin-bottom: 57px;
   text-align: center;
   color: #000000;
 }
-
 .post__list {
   display: flex;
   justify-content: center;
   gap: 30px;
 }
+.post__link {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.35;
+  color: #000000;
+}
 
 .post__item {
   background-color: #fafafa;
 }
-
-.post__item:hover,
-.post__item:focus {
+.post__item:hover, .post__item:focus {
   background-color: #ffffff;
   box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.05);
 }
@@ -213,16 +201,6 @@ img {
 .post__box {
   padding: 24px;
 }
-
 .post__box-title {
   margin-bottom: 74px;
-}
-
-.post__link {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.35;
-
-  color: #000000;
-}
+}/*# sourceMappingURL=main.css.map */
