--- a/sass/components/_post.scss
+++ b/sass/components/_post.scss
@@ -4,17 +4,14 @@
 
   &__title {
     font-weight: 400;
-    font-size: 32px;
-    line-height: 1.18;
+    @include font(32, 1.18, none);
 
     text-align: center;
     color: #000000;
   }
 
   &__text {
-    font-size: 18px;
-    line-height: 1.36;
-
+    @include font(18, 1.36, none);
     margin-bottom: 57px;
     text-align: center;
     color: #000000;
@@ -27,10 +24,7 @@
   }
 
   &__link {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.35;
+    @include font(14, 1.35, none);
 
     color: #000000;
   }
