--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,7 +3,9 @@
 
 @import './components/container';
 @import './components/header';
+@import './components/mobile-menu';
 @import './components/logo';
 @import './components/hero';
 @import './components/feature';
 @import './components/post';
+
