--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,7 +1,19 @@
 .container {
-  width: 1440px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
   margin-left: auto;
   margin-right: auto;
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
+  @media screen and (min-width: 768px) {
+    width: 768px;
+     padding-left: 15px;
+    padding-right: 15px;
+  }
+  @media screen and (min-width: 1440px) {
+    width: 1440px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
