--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,9 +1,17 @@
 .logo {
-  margin-left: 80px;
-  padding-top: 39px;
-  padding-bottom: 39px;
-  font-family: 'Homemade Apple', cursive;
+  font-family: "Homemade Apple", cursive;
   color: #231f20;
-  font-size: 18px;
-  line-height: calc(39 / 18);
+  padding-top: 10px;
+    padding-bottom: 10px;
+    margin-left: 20px;
+    font-size: 12px;
+    line-height: calc(39 / 12);
+
+  @media screen and (min-width: 767.98px) {
+    padding-top: 39px;
+    padding-bottom: 39px;
+    margin-left: 80px;
+    font-size: 18px;
+    line-height: calc(39 / 18);
+  }
 }
