--- a/css/main.css
+++ b/css/main.css
@@ -158,6 +158,11 @@ img {
   margin: 0 auto;
 }
 
+.button__qwerty {
+  display: block;
+  text-align: left;
+}
+
 .logo {
   font-family: "Homemade Apple", cursive;
   color: #231f20;
