--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -68,3 +68,7 @@ color: #000000;
     line-height: calc(39 / 18);
     margin: 0 auto;
 }
+.button__qwerty {
+    display: block;
+    text-align: left;
+}
